--- a/node-lab1/package.json
+++ b/node-lab1/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "nodemon": "^2.0.15"
   }
 }
